# dynamorio-practice

./: .gitignore  CMakeLists.txt  README.md  count_bb.c  count_bb_total.c  count_bb_total_module.c  drcovlib.c  drcovlib.h  edge_coverage.c
.devcontainer/: Dockerfile  apt_packages.txt  devcontainer.json
drcov_edge_coverage/: CMakeLists.txt  drcov.c  drcovlib.c  modules.c
drcov_edge_coverage/patches/: drcovlib.c.patch
sample_programs/: branches.c  calls.c  detect.c
