set(sample_compile_options -O0 -no-pie)
add_executable(sample_branches sample_programs/branches.c)
target_compile_options(sample_branches PRIVATE ${sample_compile_options})
add_executable(sample_calls sample_programs/calls.c)
target_compile_options(sample_calls PRIVATE ${sample_compile_options})
add_executable(sample_hello_world sample_programs/hello_world.c)
target_compile_options(sample_hello_world PRIVATE ${sample_compile_options})
add_executable(sample_loop sample_programs/loop.c)
target_compile_options(sample_loop PRIVATE ${sample_compile_options})